--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -37,9 +37,9 @@
   padding: sizing.rem(10px) sizing.rem(200px) sizing.rem(40px);
 }
 
-.title {
-  color: white;
-  font-size: sizing.rem(50px);
+.logo {
+  height: sizing.rem(300px);
+  width: sizing.rem(700px);
 }
 
 .button {
